--- a/contrib/gitian-descriptors/gitian-win.yml
+++ b/contrib/gitian-descriptors/gitian-win.yml
@@ -15,6 +15,15 @@ packages:
 - "automake"
 - "faketime"
 - "bsdmainutils"
+- "curl"
+- "g++"
+- "git-core"
+- "pkg-config"
+- "autoconf"
+- "libtool"
+- "automake"
+- "faketime"
+- "bsdmainutils"
 - "mingw-w64"
 - "g++-mingw-w64"
 - "nsis"
